Fix some java code (deprecated and marked for removal)